update chocoq demo

--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -59,12 +59,28 @@
     "Set up for HyQSAT\n",
     "\n",
     "```bash\n",
-    "  cd ./hyqsat\n",
+    "  cd ./janusq/application/hyqsat/solver\n",
     "  cmake .\n",
     "  make install\n",
-    "  cp libm* ../janusq/hyqsat\n",
-    "  cp minisat_core ../janusq/hyqsat\n",
     "```  \n",
+    "\n",
+    "Set up for Choco-Q (CPU)\n",
+    "\n",
+    "```bash\n",
+    "  cd ./janusq/application/chocoq\n",
+    "  conda env create -f environment_cpu.yml\n",
+    "  conda activate chocoq_cpu\n",
+    "  pip install .\n",
+    "```\n",
+    "\n",
+    "Set up for Choco-Q (GPU)\n",
+    "\n",
+    "```bash\n",
+    "  cd ./janusq/application/chocoq\n",
+    "  conda env create -f environment_gpu.yml\n",
+    "  conda activate chocoq_qpu\n",
+    "  pip install .\n",
+    "```\n",
     "\n",
     "## Structure of JanusQ\n",
     "\n",
@@ -73,18 +89,20 @@
     "    - \"janusq/analysis/vectorization.py\": Python script to generate the path table and vecterization of circuits, which serves as a upstream model for various analysis and optimization tasks.\n",
     "  - Fidelity preidiction and optimization\n",
     "    - \"janusq/analysis/fidelity_prediction.py\": Python script to train a downstream model for circuit fidelity prediction.\n",
-    "    - \"janusq/optimizations/mapping/mapping_ct.py\"：Python script of a typical compilation flow, including routing and scheduling. The compilation flow transforms the circuit to satisfy the processor topology so as to optimize the circuit fidelity based on the prediction model.\n",
+    "    - \"janusq/optimization/mapping/mapping_ct.py\"：Python script of a typical compilation flow, including routing and scheduling. The compilation flow transforms the circuit to satisfy the processor topology so as to optimize the circuit fidelity based on the prediction model.\n",
     "  - Unitary decomposition\n",
     "    - \"janusq/analysis/unitary_decompostion.py\": Python script that takes a unitary as input and decomposes it into matrices of basic gates, resulting in an equivalent circuit.\n",
     "- MorphQPV\n",
+    "  - \"janusq/verification/morphqpv\": Directory holding the implementation of the MorphQPV algorithm, which is a quantum program verification tool.\n",
     "- QuFEM\n",
-    "  - \"janusq/optimizations/readout_mitigation/fem/benchmarking.py\": Python script to generate a circuit for measuring calibration matrices.\n",
-    "  - \"janusq/optimizations/readout_mitigation/fem/mitigation.py\": Python script to implement iterative calibration, which includes quantifying interactions between qubits and constructing Bayesian networks.\n",
-    "  - \"janusq/optimizations/readout_mitigation/fem/tools.py\": Python script to implement data format conversion.\n",
+    "  - \"janusq/calibration/readout_mitigation/qufem/benchmarking.py\": Python script to generate a circuit for measuring calibration matrices.\n",
+    "  - \"janusq/calibration/readout_mitigation/qufem/mitigation.py\": Python script to implement iterative calibration, which includes quantifying interactions between qubits and constructing Bayesian networks.\n",
+    "  - \"janusq/calibration/readout_mitigation/qufem/tools.py\": Python script to implement data format conversion.\n",
     "- HyQSAT\n",
-    "  - \"janusq/hyqsat/common\": Directory holding common functions about cnf files, such as \"read_cnf.py\".\n",
-    "  - \"janusq/hyqsat/solver.py\": Python script holding different APIs used to solve sat problem.\n",
+    "  - \"janusq/application/hyqsat/common\": Directory holding common functions about cnf files, such as \"read_cnf.py\".\n",
+    "  - \"janusq/application/hyqsat/solver/solver.py\": Python script holding different APIs used to solve sat problem.\n",
     "- Choco-Q\n",
+    "  - \"janusq/application/chocoq\": Directory holding the implementation of Choco-Q.\n",
     "\n",
     "## Q&A\n",
     "\n",
@@ -142,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 381.61it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 385.82it/s]\n"
      ]
     }
    ],
@@ -182,9 +200,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: divide by zero encountered in det\n",
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2154: RuntimeWarning: divide by zero encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: invalid value encountered in det\n",
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2154: RuntimeWarning: invalid value encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n"
      ]
     },
@@ -192,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'011': 35, '101': 23, '100': 301, '001': 455, '110': 15, '000': 8575, '010': 596}, {'000': 630, '010': 50, '101': 295, '111': 20, '011': 570, '110': 2, '100': 29, '001': 8404}, {'101': 19, '011': 27, '100': 335, '001': 438, '110': 23, '010': 572, '000': 8586}, {'100': 14, '110': 318, '001': 28, '010': 8708, '000': 483, '111': 14, '011': 435}, {'101': 16, '100': 2, '110': 23, '001': 489, '011': 8450, '111': 340, '000': 27, '010': 653}, {'101': 1, '100': 24, '110': 306, '001': 29, '111': 6, '011': 443, '000': 491, '010': 8700}, {'101': 18, '110': 17, '001': 476, '100': 344, '111': 2, '011': 34, '010': 558, '000': 8551}, {'110': 3, '001': 8388, '100': 29, '010': 41, '000': 661, '101': 297, '111': 18, '011': 563}, {'101': 16, '110': 24, '100': 287, '001': 434, '111': 1, '011': 36, '000': 8618, '010': 584}, {'011': 2, '111': 28, '001': 11, '110': 560, '100': 8510, '010': 22, '000': 422, '101': 445}, {'011': 22, '111': 556, '110': 45, '001': 394, '100': 634, '000': 28, '101': 8321}, {'011': 1, '111': 26, '100': 8505, '110': 524, '001': 25, '010': 34, '000': 454, '101': 431}, {'011': 17, '111': 469, '110': 8590, '100': 472, '000': 27, '010': 400, '101': 25}, {'001': 32, '110': 635, '100': 41, '101': 449, '000': 3, '010': 31, '011': 397, '111': 8412}, {'001': 1, '110': 8627, '100': 479, '011': 15, '111': 416, '101': 21, '000': 18, '010': 423}, {'011': 2, '111': 42, '001': 18, '100': 8483, '110': 571, '101': 434, '010': 32, '000': 418}, {'010': 4, '000': 28, '110': 42, '001': 463, '100': 686, '111': 563, '011': 36, '101': 8178}, {'111': 23, '000': 442, '010': 32, '101': 474, '001': 23, '110': 571, '100': 8435}, {'101': 12, '011': 31, '110': 23, '100': 279, '001': 429, '010': 572, '000': 8654}, {'011': 564, '111': 20, '101': 322, '010': 45, '000': 652, '110': 3, '100': 25, '001': 8369}, {'011': 30, '111': 2, '110': 23, '001': 420, '100': 332, '101': 11, '010': 555, '000': 8627}, {'101': 1, '011': 495, '111': 13, '100': 23, '001': 17, '110': 290, '000': 477, '010': 8684}, {'011': 8528, '111': 278, '100': 1, '110': 25, '001': 444, '101': 16, '000': 40, '010': 668}, {'111': 14, '011': 440, '010': 8684, '000': 478, '001': 20, '100': 20, '110': 344}, {'101': 14, '110': 27, '001': 428, '100': 312, '111': 5, '011': 30, '010': 550, '000': 8634}, {'011': 585, '111': 21, '110': 4, '100': 26, '001': 8315, '010': 46, '000': 688, '101': 315}]\n"
+      "[{'101': 23, '110': 11, '001': 769, '100': 287, '111': 3, '011': 23, '010': 303, '000': 8581}, {'011': 309, '111': 13, '110': 1, '100': 7, '001': 9127, '101': 275, '010': 4, '000': 264}, {'111': 2, '011': 19, '110': 14, '100': 252, '001': 808, '101': 28, '010': 293, '000': 8584}, {'101': 2, '011': 741, '111': 20, '100': 22, '001': 70, '110': 266, '000': 794, '010': 8085}, {'101': 31, '011': 8558, '111': 278, '100': 3, '110': 4, '001': 851, '000': 33, '010': 242}, {'101': 2, '100': 25, '110': 239, '001': 67, '010': 8105, '000': 786, '111': 17, '011': 759}, {'101': 24, '110': 13, '100': 253, '001': 823, '111': 1, '011': 24, '010': 321, '000': 8541}, {'110': 1, '001': 9109, '100': 12, '010': 6, '000': 277, '101': 269, '111': 11, '011': 315}, {'011': 21, '110': 6, '001': 731, '100': 286, '101': 29, '010': 299, '000': 8628}, {'111': 28, '100': 8498, '110': 291, '001': 27, '010': 16, '000': 390, '101': 750}, {'010': 1, '000': 13, '110': 7, '001': 406, '100': 247, '011': 8, '111': 321, '101': 8997}, {'011': 2, '111': 30, '100': 8467, '110': 302, '001': 36, '101': 753, '010': 17, '000': 393}, {'001': 4, '110': 8075, '100': 793, '011': 34, '111': 652, '101': 64, '000': 33, '010': 345}, {'010': 10, '100': 21, '110': 240, '001': 41, '011': 384, '111': 8449, '101': 855}, {'101': 70, '011': 24, '111': 682, '001': 2, '110': 8013, '100': 808, '000': 34, '010': 367}, {'011': 1, '111': 20, '100': 8555, '110': 288, '001': 45, '010': 14, '000': 362, '101': 715}, {'000': 15, '011': 15, '111': 311, '110': 5, '100': 249, '001': 403, '101': 9002}, {'011': 4, '111': 32, '001': 32, '110': 309, '100': 8495, '101': 784, '010': 10, '000': 334}, {'011': 28, '110': 6, '001': 726, '100': 254, '101': 16, '010': 296, '000': 8674}, {'010': 13, '000': 274, '101': 306, '111': 11, '011': 310, '100': 8, '001': 9078}, {'101': 21, '011': 29, '111': 3, '110': 12, '100': 278, '001': 750, '010': 296, '000': 8611}, {'101': 2, '011': 763, '111': 21, '100': 21, '001': 55, '110': 256, '000': 803, '010': 8079}, {'101': 22, '011': 8551, '111': 325, '110': 5, '001': 828, '000': 20, '010': 249}, {'101': 3, '100': 19, '001': 82, '110': 226, '010': 8196, '000': 735, '111': 18, '011': 721}, {'101': 26, '110': 5, '100': 275, '001': 728, '111': 1, '011': 27, '010': 289, '000': 8649}, {'001': 9046, '100': 11, '010': 13, '000': 289, '101': 293, '111': 7, '011': 341}]\n"
      ]
     }
    ],
@@ -249,14 +267,121 @@
     "from janusq.application.hyqsat import readCNF\n",
     "\n",
     "# input cnf flie\n",
-    "file_path = \"cnf_examples/UF50/uf50-01.cnf\"\n",
+    "file_path = \"./data/cnf_examples/UF50/uf50-01.cnf\"\n",
     "print(readCNF(file_path))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Choco-Q\n",
+    "\n",
+    "Activate the virtual environment \"chocoq_cpu\" or \"chocoq_qpu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  1 -1  0  0  0]\n",
+      " [ 0  0  1  1 -1  1]]\n",
+      "m:\n",
+      "variables:\n",
+      "x_0 (type: binary)   x_1 (type: binary)   x_2 (type: binary)   x_3 (type: binary)   x_4 (type: binary)\n",
+      "\n",
+      "obj:\n",
+      "max 1 * x_0 * x_3 + 1 * x_1 * x_3 + 1 * x_2\n",
+      "\n",
+      "s.t.:\n",
+      "1 * x_0 + 1 * x_1 + -1 * x_2 == 0\n",
+      "1 * x_2 + 1 * x_3 + -1 * x_4 == 1\n",
+      "\n",
+      "penalty_lambda:\n",
+      "32767\n",
+      "\n",
+      "\n",
+      "Restricted license - for non-production use only - expires 2025-11-24\n",
+      "optimize_cost: (2.0, {'x_0': 0.0, 'x_1': 1.0, 'x_2': 1.0, 'x_3': 1.0, 'x_4': 1.0})\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Expected LcboModel or ModelOption, got <class 'janusq.application.chocoq.chocoq.model.lin_constr_bin_opt.LinearConstrainedBinaryOptimization'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 36\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# gpu = AerGpuProvider()\u001b[39;00m\n\u001b[1;32m     35\u001b[0m aer \u001b[38;5;241m=\u001b[39m DdsimProvider()\n\u001b[0;32m---> 36\u001b[0m solver \u001b[38;5;241m=\u001b[39m \u001b[43mChocoSolver\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprb_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# the problem model\u001b[39;49;00m\n\u001b[1;32m     38\u001b[0m \u001b[43m    \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mopt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# the optimizer for parameters updating.\u001b[39;49;00m\n\u001b[1;32m     39\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprovider\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# quantum circuit simulator.\u001b[39;49;00m\n\u001b[1;32m     40\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_layers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(solver\u001b[38;5;241m.\u001b[39mcircuit_analyze([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mculled_depth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_one_qubit_gates\u001b[39m\u001b[38;5;124m'\u001b[39m])) \n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m## the circuit analyze results\u001b[39;00m\n",
+      "File \u001b[0;32m~/Data/Quantum Technology and Device/Tutorial/HPCA 2025/JanusQ/examples/../janusq/application/chocoq/chocoq/solvers/qiskit/choco.py:75\u001b[0m, in \u001b[0;36mChocoSolver.__init__\u001b[0;34m(self, prb_model, optimizer, provider, num_layers, shots, mcx_mode)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     73\u001b[0m     mcx_mode: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     74\u001b[0m ):\n\u001b[0;32m---> 75\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprb_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option \u001b[38;5;241m=\u001b[39m ChCircuitOption(\n\u001b[1;32m     77\u001b[0m         provider\u001b[38;5;241m=\u001b[39mprovider,\n\u001b[1;32m     78\u001b[0m         num_layers\u001b[38;5;241m=\u001b[39mnum_layers,\n\u001b[1;32m     79\u001b[0m         shots\u001b[38;5;241m=\u001b[39mshots,\n\u001b[1;32m     80\u001b[0m         mcx_mode\u001b[38;5;241m=\u001b[39mmcx_mode,\n\u001b[1;32m     81\u001b[0m     )\n",
+      "File \u001b[0;32m~/anaconda3/envs/chocoq_cpu/lib/python3.10/site-packages/chocoq/solvers/abstract_solver.py:20\u001b[0m, in \u001b[0;36mSolver.__init__\u001b[0;34m(self, prb_model, optimizer)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_option \u001b[38;5;241m=\u001b[39m prb_model\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected LcboModel or ModelOption, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(prb_model)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer: Optimizer \u001b[38;5;241m=\u001b[39m optimizer\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option: CircuitOption \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Expected LcboModel or ModelOption, got <class 'janusq.application.chocoq.chocoq.model.lin_constr_bin_opt.LinearConstrainedBinaryOptimization'>"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir(\"..\")\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARN)\n",
+    "\n",
+    "# test Choco-Q\n",
+    "from janusq.application.chocoq.chocoq.model import LinearConstrainedBinaryOptimization as LcboModel\n",
+    "from janusq.application.chocoq.chocoq.solvers.optimizers import CobylaOptimizer, AdamOptimizer\n",
+    "from janusq.application.chocoq.chocoq.solvers.qiskit import (\n",
+    "    PenaltySolver, CyclicSolver, HeaSolver, ChocoSolver, \n",
+    "    AerGpuProvider, AerProvider, FakeBrisbaneProvider, FakeKyivProvider, FakeTorinoProvider, DdsimProvider,\n",
+    ")\n",
+    "\n",
+    "# ----------------------- model -----------------------\n",
+    "m = LcboModel()\n",
+    "x = m.addVars(5, name=\"x\") ## add five binary variables with prefix name x\n",
+    "m.setObjective((x[0] + x[1])* x[3] + x[2], \"max\") ## set the maximum objective with (x[0]+x[1])x[3] + x[2]\n",
+    "# m.addConstr(x[0] + x[1] + x[2] == 2)\n",
+    "# m.addConstr(x[0] + x[1] == 1)\n",
+    "\n",
+    "m.addConstr(x[0] + x[1] - x[2] == 0) #add linear constraints\n",
+    "m.addConstr(x[2] + x[3] - x[4] == 1)\n",
+    "\n",
+    "print(m.lin_constr_mtx) #print linear constraints matrix\n",
+    "print(m) # print the information of model.\n",
+    "\n",
+    "optimize = m.optimize()\n",
+    "print(f\"optimize_cost: {optimize}\\n\\n\")\n",
+    "\n",
+    "# sovler ----------------------------------------------\n",
+    "opt = CobylaOptimizer(max_iter=200) # set the optimizer COBYLA, the max iteration is 200.\n",
+    "# gpu = AerGpuProvider()\n",
+    "aer = DdsimProvider()\n",
+    "solver = ChocoSolver(\n",
+    "    prb_model=m,  # the problem model\n",
+    "    optimizer=opt,  # the optimizer for parameters updating.\n",
+    "    provider=aer,  # quantum circuit simulator.\n",
+    "    num_layers=1,\n",
+    ")\n",
+    "print(solver.circuit_analyze(['depth', 'width', 'culled_depth', 'num_one_qubit_gates'])) \n",
+    "## the circuit analyze results\n",
+    "\n",
+    "result = solver.solve() # solving with input solver\n",
+    "print(result)\n",
+    "\n",
+    "eval = solver.evaluation() # evaluation of the solving results\n",
+    "print(eval) "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "janusq",
+   "display_name": "chocoq_cpu",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
