--- a/examples/ipynb/6_1_constrained_binary_optimization_small.ipynb
+++ b/examples/ipynb/6_1_constrained_binary_optimization_small.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "janusq",
+   "display_name": "chocoq_cpu",
    "language": "python",
    "name": "python3"
   },
@@ -443,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
