--- a/janusq/application/chocoq/test.ipynb
+++ b/janusq/application/chocoq/test.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "If the cell raises error of  \"No module named 'chocoq'\", please open a new terminal and excute\n",
     "```bash\n",
-    "conda activate choco_cpu\n",
+    "conda activate chocoq_cpu\n",
     "```\n",
     "or \n",
     "```bash\n",
-    "conda activate choco_gpu\n",
+    "conda activate chocoq_gpu\n",
     "```\n",
     "enter into the `Choco-Q/` dir and excute\n",
     "```bash\n",
@@ -28,11 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "should_print = True # True for debug model and False for release mode.\n",
+    "\n",
+    "import os\n",
+    "os.chdir(\"../..\")\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARN)\n",
     "\n",
     "from janusq.application.chocoq.chocoq.model import LinearConstrainedBinaryOptimization as LcboModel\n",
     "from janusq.application.chocoq.chocoq.solvers.optimizers import CobylaOptimizer, AdamOptimizer\n",
@@ -53,31 +60,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  1 -1  0  0  0]\n",
-      " [ 0  0  1  1 -1  1]]\n",
-      "m:\n",
-      "variables:\n",
-      "x_0 (type: binary)   x_1 (type: binary)   x_2 (type: binary)   x_3 (type: binary)   x_4 (type: binary)\n",
-      "\n",
-      "obj:\n",
-      "max 1 * x_0 * x_3 + 1 * x_1 * x_3 + 1 * x_2\n",
-      "\n",
-      "s.t.:\n",
-      "1 * x_0 + 1 * x_1 + -1 * x_2 == 0\n",
-      "1 * x_2 + 1 * x_3 + -1 * x_4 == 1\n",
-      "\n",
-      "penalty_lambda:\n",
-      "32767\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ----------------------- model -----------------------\n",
     "m = LcboModel()\n",
@@ -102,20 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restricted license - for non-production use only - expires 2025-11-24\n",
-      "optimize_cost: (2.0, {'x_0': 0.0, 'x_1': 1.0, 'x_2': 1.0, 'x_3': 1.0, 'x_4': 1.0})\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "optimize = m.optimize()\n",
     "print(f\"optimize_cost: {optimize}\\n\\n\")"
@@ -132,34 +104,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best_cost: 2.0\n",
-      "best_solution_case: [0.0, 1.0, 1.0, 1.0, 1.0]\n",
-      "\n",
-      "[127, 12, 62, 110]\n",
-      "iteration 10, result: 1.138671875\n",
-      "iteration 20, result: 1.099609375\n",
-      "iteration 30, result: 1.0849609375\n",
-      "[4.107  0.7682]\n",
-      "\n",
-      "[0, 0, 0, 1, 0]: 0 ~ 0.0947265625\n",
-      "[1, 0, 1, 0, 0]: 1 ~ 0.685546875\n",
-      "[1, 0, 1, 1, 1]: 2 ~ 0.2197265625\n",
-      "\n",
-      "best_solution_probs: 22.0\n",
-      "in_constraint_probs: 100.0\n",
-      "ARG: 0.4374999978\n",
-      "mean_cost: 1.1\n",
-      "\n",
-      "([[0, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 1, 1]], [0.0947265625, 0.685546875, 0.2197265625], 32)\n",
-      "[21.97265625, 100.0, 0.43749999781250004, 32]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sovler ----------------------------------------------\n",
     "opt = CobylaOptimizer(max_iter=200) # set the optimizer COBYLA, the max iteration is 200.\n",
@@ -198,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "choco_cpu",
+   "display_name": "chocoq_cpu",
    "language": "python",
    "name": "python3"
   },
