--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -64,21 +64,32 @@
     "  make install\n",
     "```  \n",
     "\n",
-    "Set up for Choco-Q (CPU)\n",
+    "Set up for Choco-Q\n",
+    "\n",
+    "- For Linux with CPU\n",
     "\n",
     "```bash\n",
     "  cd ./janusq/application/chocoq\n",
-    "  conda env create -f environment_cpu.yml\n",
+    "  conda env create -f environment_linux_cpu.yml\n",
     "  conda activate chocoq_cpu\n",
     "  pip install .\n",
     "```\n",
     "\n",
-    "Set up for Choco-Q (GPU)\n",
+    "- For Linux with GPU\n",
     "\n",
     "```bash\n",
     "  cd ./janusq/application/chocoq\n",
-    "  conda env create -f environment_gpu.yml\n",
+    "  conda env create -f environment_linux_gpu.yml\n",
     "  conda activate chocoq_qpu\n",
+    "  pip install .\n",
+    "```\n",
+    "\n",
+    "- For MasOS\n",
+    "\n",
+    "```bash\n",
+    "  cd ./janusq/application/chocoq\n",
+    "  conda env create -f environment_macos.yml\n",
+    "  conda activate chocoq\n",
     "  pip install .\n",
     "```\n",
     "\n",
@@ -160,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 385.82it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 378.25it/s]\n"
      ]
     }
    ],
@@ -210,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'101': 23, '110': 11, '001': 769, '100': 287, '111': 3, '011': 23, '010': 303, '000': 8581}, {'011': 309, '111': 13, '110': 1, '100': 7, '001': 9127, '101': 275, '010': 4, '000': 264}, {'111': 2, '011': 19, '110': 14, '100': 252, '001': 808, '101': 28, '010': 293, '000': 8584}, {'101': 2, '011': 741, '111': 20, '100': 22, '001': 70, '110': 266, '000': 794, '010': 8085}, {'101': 31, '011': 8558, '111': 278, '100': 3, '110': 4, '001': 851, '000': 33, '010': 242}, {'101': 2, '100': 25, '110': 239, '001': 67, '010': 8105, '000': 786, '111': 17, '011': 759}, {'101': 24, '110': 13, '100': 253, '001': 823, '111': 1, '011': 24, '010': 321, '000': 8541}, {'110': 1, '001': 9109, '100': 12, '010': 6, '000': 277, '101': 269, '111': 11, '011': 315}, {'011': 21, '110': 6, '001': 731, '100': 286, '101': 29, '010': 299, '000': 8628}, {'111': 28, '100': 8498, '110': 291, '001': 27, '010': 16, '000': 390, '101': 750}, {'010': 1, '000': 13, '110': 7, '001': 406, '100': 247, '011': 8, '111': 321, '101': 8997}, {'011': 2, '111': 30, '100': 8467, '110': 302, '001': 36, '101': 753, '010': 17, '000': 393}, {'001': 4, '110': 8075, '100': 793, '011': 34, '111': 652, '101': 64, '000': 33, '010': 345}, {'010': 10, '100': 21, '110': 240, '001': 41, '011': 384, '111': 8449, '101': 855}, {'101': 70, '011': 24, '111': 682, '001': 2, '110': 8013, '100': 808, '000': 34, '010': 367}, {'011': 1, '111': 20, '100': 8555, '110': 288, '001': 45, '010': 14, '000': 362, '101': 715}, {'000': 15, '011': 15, '111': 311, '110': 5, '100': 249, '001': 403, '101': 9002}, {'011': 4, '111': 32, '001': 32, '110': 309, '100': 8495, '101': 784, '010': 10, '000': 334}, {'011': 28, '110': 6, '001': 726, '100': 254, '101': 16, '010': 296, '000': 8674}, {'010': 13, '000': 274, '101': 306, '111': 11, '011': 310, '100': 8, '001': 9078}, {'101': 21, '011': 29, '111': 3, '110': 12, '100': 278, '001': 750, '010': 296, '000': 8611}, {'101': 2, '011': 763, '111': 21, '100': 21, '001': 55, '110': 256, '000': 803, '010': 8079}, {'101': 22, '011': 8551, '111': 325, '110': 5, '001': 828, '000': 20, '010': 249}, {'101': 3, '100': 19, '001': 82, '110': 226, '010': 8196, '000': 735, '111': 18, '011': 721}, {'101': 26, '110': 5, '100': 275, '001': 728, '111': 1, '011': 27, '010': 289, '000': 8649}, {'001': 9046, '100': 11, '010': 13, '000': 289, '101': 293, '111': 7, '011': 341}]\n"
+      "[{'111': 1, '011': 11, '110': 14, '001': 595, '100': 887, '101': 68, '010': 169, '000': 8255}, {'000': 654, '010': 15, '111': 11, '011': 177, '101': 850, '110': 2, '100': 75, '001': 8216}, {'111': 1, '011': 14, '110': 19, '001': 634, '100': 883, '000': 8183, '010': 196, '101': 70}, {'101': 4, '011': 644, '111': 60, '010': 8076, '000': 315, '001': 18, '100': 28, '110': 855}, {'101': 27, '100': 6, '110': 63, '001': 285, '111': 876, '011': 8064, '000': 24, '010': 655}, {'101': 4, '011': 594, '111': 67, '010': 8175, '000': 288, '100': 21, '001': 17, '110': 834}, {'111': 1, '011': 14, '101': 70, '001': 597, '100': 874, '110': 20, '010': 192, '000': 8232}, {'110': 2, '001': 8287, '100': 61, '111': 13, '011': 159, '010': 20, '000': 625, '101': 833}, {'111': 2, '011': 13, '110': 20, '100': 822, '001': 617, '101': 60, '010': 181, '000': 8285}, {'111': 21, '010': 7, '000': 493, '001': 45, '100': 8584, '110': 200, '101': 650}, {'010': 1, '000': 38, '011': 9, '111': 205, '100': 711, '001': 560, '110': 18, '101': 8458}, {'111': 14, '100': 8553, '001': 32, '110': 214, '010': 8, '000': 499, '101': 680}, {'101': 23, '001': 1, '110': 8411, '100': 337, '011': 36, '111': 632, '000': 14, '010': 546}, {'000': 3, '010': 51, '101': 297, '111': 8480, '011': 481, '001': 16, '100': 15, '110': 657}, {'101': 14, '001': 3, '110': 8493, '100': 334, '111': 616, '011': 33, '000': 21, '010': 486}, {'111': 12, '100': 8616, '001': 35, '110': 205, '101': 615, '010': 12, '000': 505}, {'011': 10, '111': 181, '110': 15, '001': 516, '100': 690, '000': 43, '101': 8545}, {'111': 13, '100': 8587, '001': 35, '110': 168, '101': 659, '010': 8, '000': 530}, {'111': 2, '011': 12, '110': 24, '100': 854, '001': 600, '101': 71, '010': 203, '000': 8234}, {'110': 2, '001': 8308, '100': 66, '111': 25, '011': 174, '010': 16, '000': 615, '101': 794}, {'101': 67, '110': 17, '001': 648, '100': 879, '111': 1, '011': 12, '010': 189, '000': 8187}, {'101': 1, '110': 845, '100': 31, '001': 33, '111': 72, '011': 590, '000': 287, '010': 8141}, {'101': 34, '011': 8097, '111': 841, '010': 614, '000': 14, '100': 1, '001': 342, '110': 57}, {'101': 2, '011': 637, '111': 67, '010': 8049, '000': 336, '001': 15, '100': 31, '110': 863}, {'111': 1, '011': 17, '110': 28, '100': 845, '001': 599, '000': 8234, '010': 203, '101': 73}, {'000': 655, '010': 19, '111': 22, '011': 190, '101': 866, '100': 73, '001': 8175}]\n"
      ]
     }
    ],
@@ -277,7 +288,11 @@
    "source": [
     "### Test Choco-Q\n",
     "\n",
-    "Activate the virtual environment \"chocoq_cpu\" or \"chocoq_qpu\""
+    "Activate the corresponding virtual environment for Choco-Q\n",
+    "\n",
+    "```bash\n",
+    "  conda activate chocoq\n",
+    "```"
    ]
   },
   {
@@ -306,7 +321,7 @@
       "32767\n",
       "\n",
       "\n",
-      "Restricted license - for non-production use only - expires 2025-11-24\n",
+      "Restricted license - for non-production use only - expires 2026-11-23\n",
       "optimize_cost: (2.0, {'x_0': 0.0, 'x_1': 1.0, 'x_2': 1.0, 'x_3': 1.0, 'x_4': 1.0})\n",
       "\n",
       "\n"
@@ -320,8 +335,8 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[1], line 36\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# gpu = AerGpuProvider()\u001b[39;00m\n\u001b[1;32m     35\u001b[0m aer \u001b[38;5;241m=\u001b[39m DdsimProvider()\n\u001b[0;32m---> 36\u001b[0m solver \u001b[38;5;241m=\u001b[39m \u001b[43mChocoSolver\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprb_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# the problem model\u001b[39;49;00m\n\u001b[1;32m     38\u001b[0m \u001b[43m    \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mopt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# the optimizer for parameters updating.\u001b[39;49;00m\n\u001b[1;32m     39\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprovider\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# quantum circuit simulator.\u001b[39;49;00m\n\u001b[1;32m     40\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_layers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(solver\u001b[38;5;241m.\u001b[39mcircuit_analyze([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mculled_depth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_one_qubit_gates\u001b[39m\u001b[38;5;124m'\u001b[39m])) \n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m## the circuit analyze results\u001b[39;00m\n",
-      "File \u001b[0;32m~/Data/Quantum Technology and Device/Tutorial/HPCA 2025/JanusQ/examples/../janusq/application/chocoq/chocoq/solvers/qiskit/choco.py:75\u001b[0m, in \u001b[0;36mChocoSolver.__init__\u001b[0;34m(self, prb_model, optimizer, provider, num_layers, shots, mcx_mode)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     73\u001b[0m     mcx_mode: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     74\u001b[0m ):\n\u001b[0;32m---> 75\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprb_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option \u001b[38;5;241m=\u001b[39m ChCircuitOption(\n\u001b[1;32m     77\u001b[0m         provider\u001b[38;5;241m=\u001b[39mprovider,\n\u001b[1;32m     78\u001b[0m         num_layers\u001b[38;5;241m=\u001b[39mnum_layers,\n\u001b[1;32m     79\u001b[0m         shots\u001b[38;5;241m=\u001b[39mshots,\n\u001b[1;32m     80\u001b[0m         mcx_mode\u001b[38;5;241m=\u001b[39mmcx_mode,\n\u001b[1;32m     81\u001b[0m     )\n",
-      "File \u001b[0;32m~/anaconda3/envs/chocoq_cpu/lib/python3.10/site-packages/chocoq/solvers/abstract_solver.py:20\u001b[0m, in \u001b[0;36mSolver.__init__\u001b[0;34m(self, prb_model, optimizer)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_option \u001b[38;5;241m=\u001b[39m prb_model\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected LcboModel or ModelOption, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(prb_model)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer: Optimizer \u001b[38;5;241m=\u001b[39m optimizer\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option: CircuitOption \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/Data/Quantum Technology and Device/Tutorial/HPCA 2025/JanusQ/examples/../janusq/application/chocoq/chocoq/solvers/qiskit/choco.py:75\u001b[0m, in \u001b[0;36mChocoSolver.__init__\u001b[0;34m(self, prb_model, optimizer, provider, num_layers, shots, mcx_mode)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     73\u001b[0m     mcx_mode: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     74\u001b[0m ):\n\u001b[0;32m---> 75\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprb_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option \u001b[38;5;241m=\u001b[39m ChCircuitOption(\n\u001b[1;32m     77\u001b[0m         provider\u001b[38;5;241m=\u001b[39mprovider,\n\u001b[1;32m     78\u001b[0m         num_layers\u001b[38;5;241m=\u001b[39mnum_layers,\n\u001b[1;32m     79\u001b[0m         shots\u001b[38;5;241m=\u001b[39mshots,\n\u001b[1;32m     80\u001b[0m         mcx_mode\u001b[38;5;241m=\u001b[39mmcx_mode,\n\u001b[1;32m     81\u001b[0m     )\n",
+      "File \u001b[0;32m~/anaconda3/envs/chocoq/lib/python3.10/site-packages/chocoq/solvers/abstract_solver.py:20\u001b[0m, in \u001b[0;36mSolver.__init__\u001b[0;34m(self, prb_model, optimizer)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_option \u001b[38;5;241m=\u001b[39m prb_model\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected LcboModel or ModelOption, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(prb_model)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer: Optimizer \u001b[38;5;241m=\u001b[39m optimizer\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option: CircuitOption \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
       "\u001b[0;31mTypeError\u001b[0m: Expected LcboModel or ModelOption, got <class 'janusq.application.chocoq.chocoq.model.lin_constr_bin_opt.LinearConstrainedBinaryOptimization'>"
      ]
     }
@@ -381,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chocoq_cpu",
+   "display_name": "chocoq",
    "language": "python",
    "name": "python3"
   },
