--- a/janusq/application/chocoq/test.ipynb
+++ b/janusq/application/chocoq/test.ipynb
@@ -141,16 +141,13 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Expected LcboModel or ModelOption, got <class 'janusq.application.chocoq.chocoq.model.lin_constr_bin_opt.LinearConstrainedBinaryOptimization'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# gpu = AerGpuProvider()\u001b[39;00m\n\u001b[1;32m      4\u001b[0m aer \u001b[38;5;241m=\u001b[39m DdsimProvider()\n\u001b[0;32m----> 5\u001b[0m solver \u001b[38;5;241m=\u001b[39m \u001b[43mChocoSolver\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprb_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# the problem model\u001b[39;49;00m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mopt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# the optimizer for parameters updating.\u001b[39;49;00m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprovider\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# quantum circuit simulator.\u001b[39;49;00m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_layers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(solver\u001b[38;5;241m.\u001b[39mcircuit_analyze([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mculled_depth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_one_qubit_gates\u001b[39m\u001b[38;5;124m'\u001b[39m])) \n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m## the circuit analyze results\u001b[39;00m\n",
-      "File \u001b[0;32m~/Data/Quantum Technology and Device/Tutorial/HPCA 2025/JanusQ/janusq/../janusq/application/chocoq/chocoq/solvers/qiskit/choco.py:75\u001b[0m, in \u001b[0;36mChocoSolver.__init__\u001b[0;34m(self, prb_model, optimizer, provider, num_layers, shots, mcx_mode)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     73\u001b[0m     mcx_mode: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     74\u001b[0m ):\n\u001b[0;32m---> 75\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprb_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option \u001b[38;5;241m=\u001b[39m ChCircuitOption(\n\u001b[1;32m     77\u001b[0m         provider\u001b[38;5;241m=\u001b[39mprovider,\n\u001b[1;32m     78\u001b[0m         num_layers\u001b[38;5;241m=\u001b[39mnum_layers,\n\u001b[1;32m     79\u001b[0m         shots\u001b[38;5;241m=\u001b[39mshots,\n\u001b[1;32m     80\u001b[0m         mcx_mode\u001b[38;5;241m=\u001b[39mmcx_mode,\n\u001b[1;32m     81\u001b[0m     )\n",
-      "File \u001b[0;32m~/anaconda3/envs/chocoq/lib/python3.10/site-packages/chocoq/solvers/abstract_solver.py:20\u001b[0m, in \u001b[0;36mSolver.__init__\u001b[0;34m(self, prb_model, optimizer)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_option \u001b[38;5;241m=\u001b[39m prb_model\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected LcboModel or ModelOption, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(prb_model)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer: Optimizer \u001b[38;5;241m=\u001b[39m optimizer\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircuit_option: CircuitOption \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Expected LcboModel or ModelOption, got <class 'janusq.application.chocoq.chocoq.model.lin_constr_bin_opt.LinearConstrainedBinaryOptimization'>"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best_cost: 2.0\n",
+      "best_solution_case: [0.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "\n",
+      "[127, 12, 62, None]\n"
      ]
     }
    ],
@@ -171,9 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 10, result: 1.1015625\n",
+      "iteration 20, result: 1.150390625\n",
+      "iteration 30, result: 1.13671875\n",
+      "best_params: [8.3507 5.2849]\n",
+      "([[0, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 1, 1]], [0.048828125, 0.76953125, 0.181640625], 31)\n"
+     ]
+    }
+   ],
    "source": [
     "result = solver.solve() # solving with input solver\n",
     "print(result)"
@@ -181,9 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[0, 0, 0, 1, 0]: 0 ~ 0.048828125\n",
+      "[1, 0, 1, 0, 0]: 1 ~ 0.76953125\n",
+      "[1, 0, 1, 1, 1]: 2 ~ 0.181640625\n",
+      "\n",
+      "best_solution_probs: 18.2\n",
+      "in_constraint_probs: 100.0\n",
+      "ARG: 0.4335937478\n",
+      "mean_cost: 1.1\n",
+      "\n",
+      "[18.1640625, 100.0, 0.43359374783203125, 31]\n"
+     ]
+    }
+   ],
    "source": [
     "eval = solver.evaluation() # evaluation of the solving results\n",
     "print(eval) "
