--- a/examples/ipynb/6_1_constrained_binary_optimization_small.ipynb
+++ b/examples/ipynb/6_1_constrained_binary_optimization_small.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "[1]: https://ieeexplore.ieee.org/document/TBD\n",
     "\n",
-    "Corresponding to Table 1 in the original paper, but with the Choco-Q* part omitted."
+    "Corresponding to Table 1 in the original paper, but with the Choco-Q* part omitted.\n",
+    "\n",
+    "Execute this notebook with the virtual environment for Choco-Q to avoid package conflicts."
    ]
   },
   {
@@ -107,40 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process SpawnProcess-1:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/chutianyao/anaconda3/envs/chocoq/lib/python3.10/multiprocessing/process.py\", line 315, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/Users/chutianyao/anaconda3/envs/chocoq/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/chutianyao/anaconda3/envs/chocoq/lib/python3.10/concurrent/futures/process.py\", line 237, in _process_worker\n",
-      "    call_item = call_queue.get(block=True)\n",
-      "  File \"/Users/chutianyao/anaconda3/envs/chocoq/lib/python3.10/multiprocessing/queues.py\", line 122, in get\n",
-      "    return _ForkingPickler.loads(res)\n",
-      "AttributeError: Can't get attribute 'process_layer' on <module '__main__' (built-in)>\n"
-     ]
-    },
-    {
-     "ename": "BrokenProcessPool",
-     "evalue": "A process in the process pool was terminated abruptly while the future was running or pending.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBrokenProcessPool\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 52\u001b[0m\n\u001b[1;32m     50\u001b[0m diff \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 52\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfuture\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mremaining_time\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m     diff\u001b[38;5;241m.\u001b[39mextend(result)\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;66;03m# print(f\"Task for problem {pkid}, num_layers {num_layers} executed successfully.\")\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/chocoq/lib/python3.10/concurrent/futures/_base.py:445\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    443\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n\u001b[1;32m    444\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[0;32m--> 445\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    447\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m()\n",
-      "File \u001b[0;32m~/anaconda3/envs/chocoq/lib/python3.10/concurrent/futures/_base.py:390\u001b[0m, in \u001b[0;36mFuture.__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    388\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception:\n\u001b[1;32m    389\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 390\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\n\u001b[1;32m    391\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    392\u001b[0m         \u001b[38;5;66;03m# Break a reference cycle with the exception in self._exception\u001b[39;00m\n\u001b[1;32m    393\u001b[0m         \u001b[38;5;28mself\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mBrokenProcessPool\u001b[0m: A process in the process pool was terminated abruptly while the future was running or pending."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "problems_pkg = flp_problems_pkg + gcp_problems_pkg + kpp_problems_pkg\n",
     "\n",
