fix chocoq demo

--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -298,30 +298,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1  1 -1  0  0  0]\n",
-      " [ 0  0  1  1 -1  1]]\n",
-      "m:\n",
-      "variables:\n",
-      "x_0 (type: binary)   x_1 (type: binary)   x_2 (type: binary)   x_3 (type: binary)   x_4 (type: binary)\n",
-      "\n",
-      "obj:\n",
-      "max 1 * x_0 * x_3 + 1 * x_1 * x_3 + 1 * x_2\n",
-      "\n",
-      "s.t.:\n",
-      "1 * x_0 + 1 * x_1 + -1 * x_2 == 0\n",
-      "1 * x_2 + 1 * x_3 + -1 * x_4 == 1\n",
-      "\n",
-      "penalty_lambda:\n",
-      "32767\n",
-      "\n",
-      "\n",
       "Restricted license - for non-production use only - expires 2026-11-23\n",
-      "optimize_cost: (2.0, {'x_0': 0.0, 'x_1': 1.0, 'x_2': 1.0, 'x_3': 1.0, 'x_4': 1.0})\n",
+      "Optimized cost and assignment: (2.0, {'x_0': 0.0, 'x_1': 1.0, 'x_2': 1.0, 'x_3': 1.0, 'x_4': 1.0})\n",
       "\n",
-      "\n",
-      "[127, 12, 62, None]\n",
-      "([[0, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 1, 1]], [0.041015625, 0.796875, 0.162109375], 28)\n",
-      "[16.2109375, 100.0, 0.4394531228027344, 28]\n"
+      "\n"
      ]
     }
    ],
@@ -335,46 +315,14 @@
     "\n",
     "# test Choco-Q\n",
     "from janusq.application.chocoq.chocoq.model import LinearConstrainedBinaryOptimization as LcboModel\n",
-    "from janusq.application.chocoq.chocoq.solvers.optimizers import CobylaOptimizer, AdamOptimizer\n",
-    "from janusq.application.chocoq.chocoq.solvers.qiskit import (\n",
-    "    PenaltySolver, CyclicSolver, HeaSolver, ChocoSolver, \n",
-    "    AerGpuProvider, AerProvider, FakeBrisbaneProvider, FakeKyivProvider, FakeTorinoProvider, DdsimProvider,\n",
-    ")\n",
     "\n",
-    "# ----------------------- model -----------------------\n",
     "m = LcboModel()\n",
-    "x = m.addVars(5, name=\"x\") ## add five binary variables with prefix name x\n",
-    "m.setObjective((x[0] + x[1])* x[3] + x[2], \"max\") ## set the maximum objective with (x[0]+x[1])x[3] + x[2]\n",
-    "# m.addConstr(x[0] + x[1] + x[2] == 2)\n",
-    "# m.addConstr(x[0] + x[1] == 1)\n",
-    "\n",
-    "m.addConstr(x[0] + x[1] - x[2] == 0) #add linear constraints\n",
+    "x = m.addVars(5, name=\"x\")\n",
+    "m.setObjective((x[0] + x[1])* x[3] + x[2], \"max\")\n",
+    "m.addConstr(x[0] + x[1] - x[2] == 0)\n",
     "m.addConstr(x[2] + x[3] - x[4] == 1)\n",
-    "\n",
-    "print(m.lin_constr_mtx) #print linear constraints matrix\n",
-    "print(m) # print the information of model.\n",
-    "\n",
     "optimize = m.optimize()\n",
-    "print(f\"optimize_cost: {optimize}\\n\\n\")\n",
-    "\n",
-    "# sovler ----------------------------------------------\n",
-    "opt = CobylaOptimizer(max_iter=200) # set the optimizer COBYLA, the max iteration is 200.\n",
-    "# gpu = AerGpuProvider()\n",
-    "aer = DdsimProvider()\n",
-    "solver = ChocoSolver(\n",
-    "    prb_model=m,  # the problem model\n",
-    "    optimizer=opt,  # the optimizer for parameters updating.\n",
-    "    provider=aer,  # quantum circuit simulator.\n",
-    "    num_layers=1,\n",
-    ")\n",
-    "print(solver.circuit_analyze(['depth', 'width', 'culled_depth', 'num_one_qubit_gates'])) \n",
-    "## the circuit analyze results\n",
-    "\n",
-    "result = solver.solve() # solving with input solver\n",
-    "print(result)\n",
-    "\n",
-    "eval = solver.evaluation() # evaluation of the solving results\n",
-    "print(eval) "
+    "print(f\"Optimized cost and assignment: {optimize}\\n\\n\")"
    ]
   }
  ],
