--- a/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
+++ b/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
@@ -19,7 +19,6 @@
     "\n",
     "3-SAT problem is a fundamental problem in various applications, such as artificial intelligence, circuit analysis, and protein structure prediction. Since the 3-SAT problem is an NP-complete problem, the time complexity of classical algorithms increases exponentially with the number of clauses and variables. We observe that the classical CDCL algorithm has the advantage of solving larger problems, while QA is more suitable for solving small but hard problems. To combine their advantages, we introduce HyQSAT in this notebook, a hybrid approach that integrates quantum annealing (QA) with the classical Conflict-Driven Clause Learning (CDCL) algorithm to enable end-to-end acceleration for solving 3-SAT problems. \n",
     "\n",
-    "\n",
     "<div style=\"text-align:center;\">\n",
     "    <img src=\"../picture/5_1_hyqsat.png\"  width=\"45%\" height=\"45%\">\n",
     "</div>\n",
@@ -44,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the 3-SAT Problem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -61,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using HyQSAT API to Solve the Problem\n",
+    "## Using HyQSAT API to Solve the Problem\n",
     "\n",
     "We can use a QA simulator or real-world QA hardware to solve the SAT roblem. For example, here we use the simualtor."
    ]
@@ -114,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparison to MiniSAT\n",
+    "## Comparison to MiniSAT\n",
     "\n",
     "We compare it to the MiniSAT solver."
    ]
